--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -31,10 +31,10 @@ jobs:
         run: npx hardhat compile
 
       - name: Run tests
-        run: npm test
+        run: npx hardhat test
 
       - name: Generate test coverage
-        run: npm run coverage
+        run: npx hardhat coverage
         continue-on-error: true
 
       - name: Upload coverage to Codecov
