--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -12,7 +12,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: [16.x, 18.x, 20.x]
+        node-version: [20.x]
 
     steps:
       - name: Checkout code
@@ -53,10 +53,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Use Node.js 18.x
+      - name: Use Node.js 20.x
         uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: 20.x
           cache: "npm"
 
       - name: Install dependencies
@@ -69,7 +69,7 @@ jobs:
         uses: crytic/slither-action@v0.3.0
         id: slither
         with:
-          node-version: 18.x
+          node-version: 20.x
           ignore-compile: true
 
       - name: Upload Slither results to GitHub
@@ -84,10 +84,10 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Use Node.js 18.x
+      - name: Use Node.js 20.x
         uses: actions/setup-node@v4
         with:
-          node-version: 18.x
+          node-version: 20.x
           cache: "npm"
 
       - name: Install dependencies
