--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "ethereum-waffle": "^4.0.10",
     "ethers": "^5.0.0",
     "hardhat": "^2.0.0",
+    "hardhat-gas-reporter": "^2.3.0",
     "ts-node": "^10.0.0",
     "typechain": "^8.3.2",
     "typescript": "^4.0.0"
