--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript": "^4.0.0"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.9.6"
+    "@openzeppelin/contracts": "^4.9.6",
+    "dotenv": "^17.2.2"
   }
 }
