--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "typescript": "^4.0.0"
   },
   "dependencies": {
+    "@mrazakos/vc-ecdsa-crypto": "^2.0.0",
     "@openzeppelin/contracts": "^4.9.6",
     "dotenv": "^17.2.2"
   }
